--- a/2021-06-28-nrsn-phd-day/nrsn-phd-day_index.html
+++ b/2021-06-28-nrsn-phd-day/nrsn-phd-day_index.html
@@ -1,53 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
 
-<head>
-    <meta charset="utf-8">
-    
     <title>NRSN PhD Day</title>
-    
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../script.js"></script>
+  </head>
 
-</head>
+  <body>
+    <div class="container">
+      <h1>NRSN PhD Day</h1>
 
-
-<body>
-<div class="container">
-
-<h1>NRSN PhD Day</h1>
-
-<table class="tb">
-    <colgroup>
-        <col style="width: 10%">
-        <col style="width: 70%">
-    </colgroup>
-    <thead>
-        <tr>
+      <table class="tb">
+        <colgroup>
+          <col style="width: 10%" />
+          <col style="width: 70%" />
+        </colgroup>
+        <thead>
+          <tr>
             <th>type</th>
             <th>description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="newtab" data-href="./nrsn-phd-day-introduction/index.html">
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="newtab" data-href="./nrsn-phd-day-introduction/index.html">
             <td><i class="fab fa-js-square"></i></td>
             <td>Slides for the introduction</td>
-        </tr>
-        <tr class="newtab" data-href="break_slide/break_slide.html">
+          </tr>
+          <tr class="newtab" data-href="break_slide/break_slide.html">
             <td><i class="fab fa-html5"></i></td>
-            <td>Slide to display during the breaks<td>
-        </tr>
-    </tbody>
-</table>
+            <td>Slide to display during the breaks</td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
 
-<button class="btn" onclick="history.back()">
-    <i class="fas fa-chevron-left">&nbsp;Back to index</i>
-</button>
-
-
-</div>
-</body>
+      <button class="btn" onclick="location.href='/slides/'">
+        <i class="fas fa-chevron-left">&nbsp;Back to index</i>
+      </button>
+    </div>
+  </body>
 </html>
