--- a/2021-10-13-wcpg/wcpg_index.html
+++ b/2021-10-13-wcpg/wcpg_index.html
@@ -1,61 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
 
-<head>
-    <meta charset="utf-8">
-    
     <title>World Congress of Psychiatry Genetics 2021</title>
-    
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../script.js"></script>
+  </head>
 
-</head>
+  <body>
+    <div class="container">
+      <h1>World Congress of Psychiatry Genetics 2021</h1>
 
-
-<body>
-<div class="container">
-
-<h1>World Congress of Psychiatry Genetics 2021</h1>
-
-<table class="tb">
-    <colgroup>
-        <col style="width: 10%">
-        <col style="width: 70%">
-    </colgroup>
-    <thead>
-        <tr>
+      <table class="tb">
+        <colgroup>
+          <col style="width: 10%" />
+          <col style="width: 70%" />
+        </colgroup>
+        <thead>
+          <tr>
             <th>type</th>
             <th>description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="newtab" data-href="./wcpg-slides/index.html">
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="newtab" data-href="./wcpg-slides/index.html">
             <td><i class="fab fa-js-square"></i></td>
             <td>Slides for the presentation</td>
-        </tr>
-        <tr class="newtab" data-href="211013_DanielRoelfs_Shared_genetic_determinants_brain_functional_connectome.pdf">
+          </tr>
+          <tr class="newtab" data-href="211013_DanielRoelfs_Shared_genetic_determinants_brain_functional_connectome.pdf">
             <td><i class="far fa-file-pdf"></i></td>
             <td>PDF of the slides</td>
-        </tr>
-        <tr class="newtab" data-href="./imaging-meeting-slides/index.html">
+          </tr>
+          <tr class="newtab" data-href="./imaging-meeting-slides/index.html">
             <td><i class="fab fa-js-square"></i></td>
             <td>Slides for the practice presentation at the Imaging Meeting on 11/10/2021</td>
-        </tr>
-        <tr class="newtab" data-href="211013_DanielRoelfs_Shared_genetic_determinants_brain_functional_connectome.pptx">
+          </tr>
+          <tr class="newtab" data-href="211013_DanielRoelfs_Shared_genetic_determinants_brain_functional_connectome.pptx">
             <td><i class="far fa-file-powerpoint"></i></td>
             <td>Powerpoint of the slides (old version submitted for backup)</td>
-        </tr>
-    </tbody>
-</table>
+          </tr>
+        </tbody>
+      </table>
 
-<button class="btn" onclick="history.back()">
-    <i class="fas fa-chevron-left">&nbsp;Back to index</i>
-</button>
-
-
-</div>
-</body>
+      <button class="btn" onclick="location.href='/slides/'">
+        <i class="fas fa-chevron-left">&nbsp;Back to index</i>
+      </button>
+    </div>
+  </body>
 </html>
