--- a/2021-11-15-imaging-group-phd-day/imaging-group-phd-day_index.html
+++ b/2021-11-15-imaging-group-phd-day/imaging-group-phd-day_index.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-        <title>Imaging Group PhD Day 15/11/2021</title>
+    <title>Imaging Group PhD Day 15/11/2021</title>
 
-        <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="../script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../script.js"></script>
+  </head>
 
-    </head>
+  <body>
+    <div class="container">
+      <h1>Imaging Group PhD Day 15/11/2021</h1>
 
-    <body>
-        <div class="container">
-        
-            <h1>Imaging Group PhD Day 15/11/2021</h1>
-            
-            <table class="tb">
-                <colgroup>
-                    <col style="width: 10%">
-                    <col style="width: 70%">
-                </colgroup>
-                <thead>
-                    <tr>
-                        <th>type</th>
-                        <th>description</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="newtab" data-href="./imaging-group-phd-day-slides/index.html">
-                        <td><i class="fab fa-js-square"></i></td>
-                        <td>Slides for the presentation</td>
-                    </tr>
-                    <tr class="newtab" data-href="https://github.com/danielroelfs/slides/tree/main/2021-11-15-imaging-group-phd-day/imaging-group-phd-day-resources/">
-                        <td><i class="fas fa-folder-open"></i></td>
-                        <td>Resources and assets for presentations</td>
-                    </tr>
-                </tbody>
-            </table>
+      <table class="tb">
+        <colgroup>
+          <col style="width: 10%" />
+          <col style="width: 70%" />
+        </colgroup>
+        <thead>
+          <tr>
+            <th>type</th>
+            <th>description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="newtab" data-href="./imaging-group-phd-day-slides/index.html">
+            <td><i class="fab fa-js-square"></i></td>
+            <td>Slides for the presentation</td>
+          </tr>
+          <tr
+            class="newtab"
+            data-href="https://github.com/danielroelfs/slides/tree/main/2021-11-15-imaging-group-phd-day/imaging-group-phd-day-resources/"
+          >
+            <td><i class="fas fa-folder-open"></i></td>
+            <td>Resources and assets for presentations</td>
+          </tr>
+        </tbody>
+      </table>
 
-            <button class="btn" onclick="history.back()">
-                <i class="fas fa-chevron-left">&nbsp;Back to index</i>
-            </button>
-
-        </div>
-    </body>
+      <button class="btn" onclick="location.href='/slides/'">
+        <i class="fas fa-chevron-left">&nbsp;Back to index</i>
+      </button>
+    </div>
+  </body>
 </html>
