--- a/2021-11-26-ecrm21/ecrm21_index.html
+++ b/2021-11-26-ecrm21/ecrm21_index.html
@@ -1,66 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-        <title>Early-Career Researchers Meeting 2021</title>
+    <title>Early-Career Researchers Meeting 2021</title>
 
-        <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="../script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../script.js"></script>
+  </head>
 
-    </head>
+  <body>
+    <div class="container">
+      <h1>Early-Career Researchers Meeting 2021</h1>
 
-    <body>
-        <div class="container">
-        
-            <h1>Early-Career Researchers Meeting 2021</h1>
-            
-            <table class="tb">
-                <colgroup>
-                    <col style="width: 10%">
-                    <col style="width: 70%">
-                </colgroup>
-                <thead>
-                    <tr>
-                        <th>type</th>
-                        <th>description</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="newtab" data-href="./intro_slides/index.html">
-                        <td><i class="fab fa-js-square"></i></td>
-                        <td>Slides for the introduction</td>
-                    </tr>
-                    <tr class="newtab" data-href="./digital_program/digital_program.html">
-                        <td><i class="fab fa-html5"></i></td>
-                        <td>Digital program</td>
-                    </tr>
-                    <tr class="newtab" data-href="./analog_program/ecrm21_final_program.pdf">
-                        <td><i class="far fa-file-pdf"></i></td>
-                        <td>Analog program</td>
-                    </tr>
-                    <tr class="newtab" data-href="./break_slide/break_slide.html">
-                        <td><i class="fab fa-html5"></i></td>
-                        <td>Page to display during the breaks</td>
-                    </tr>
-                    <tr class="newtab" data-href="./interactive_session/interactive_session.html">
-                        <td><i class="fab fa-html5"></i></td>
-                        <td>Instructions for the interactive session</td>
-                    </tr>
-                    <tr class="newtab" data-href="./index.html">
-                        <td><i class="fab fa-html5"></i></td>
-                        <td>Landing page for the different pages and files</td>
-                    </tr>
-                </tbody>
-            </table>
+      <table class="tb">
+        <colgroup>
+          <col style="width: 10%" />
+          <col style="width: 70%" />
+        </colgroup>
+        <thead>
+          <tr>
+            <th>type</th>
+            <th>description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="newtab" data-href="./intro_slides/index.html">
+            <td><i class="fab fa-js-square"></i></td>
+            <td>Slides for the introduction</td>
+          </tr>
+          <tr class="newtab" data-href="./digital_program/digital_program.html">
+            <td><i class="fab fa-html5"></i></td>
+            <td>Digital program</td>
+          </tr>
+          <tr class="newtab" data-href="./analog_program/ecrm21_final_program.pdf">
+            <td><i class="far fa-file-pdf"></i></td>
+            <td>Analog program</td>
+          </tr>
+          <tr class="newtab" data-href="./break_slide/break_slide.html">
+            <td><i class="fab fa-html5"></i></td>
+            <td>Page to display during the breaks</td>
+          </tr>
+          <tr class="newtab" data-href="./interactive_session/interactive_session.html">
+            <td><i class="fab fa-html5"></i></td>
+            <td>Instructions for the interactive session</td>
+          </tr>
+          <tr class="newtab" data-href="./index.html">
+            <td><i class="fab fa-html5"></i></td>
+            <td>Landing page for the different pages and files</td>
+          </tr>
+        </tbody>
+      </table>
 
-            <button class="btn" onclick="history.back()">
-                <i class="fas fa-chevron-left">&nbsp;Back to index</i>
-            </button>
-
-        </div>
-    </body>
+      <button class="btn" onclick="location.href='/slides/'">
+        <i class="fas fa-chevron-left">&nbsp;Back to index</i>
+      </button>
+    </div>
+  </body>
 </html>
