--- a/2021-11-26-ecrm21/index.html
+++ b/2021-11-26-ecrm21/index.html
@@ -1,66 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-		<title>ECRM21 - Homepage</title>
+    <title>ECRM21 - Homepage</title>
 
-		<link rel="stylesheet" href="./intro_slides/dist/ecrm.css">
+    <link rel="stylesheet" href="./intro_slides/dist/ecrm.css" />
 
-        <base target="_blank">
-
-	</head>
-	<body>
-
-        <div class="reveal container homepage">
-
-            <div class="logo" style="margin: 4em 0 2em;">
-                <div class="square">
-                    <img src="intro_slides/files/seal_white.png" style="margin: auto;width: 80%;">
-                </div>
-                <h1 class="title upp">
-                    Early<span style="color: transparent;">Career</span><br>
-                    Researchers<br>
-                    <span style="color: transparent;">Meeting</span>2021
-                </h1>
-            </div>
-
-            <div style="display: flex;justify-content: space-between;align-items: center;padding-top: 0;">
-                <div style="display: flex;">
-                    <h1 class="title" style="font-size: 2em;text-align: center;padding-bottom: 0;padding-top: 0;line-height: 2;">
-                        <span style="color: transparent;">26.</span>november
-                    </h1>
-                </div>
-                <div style="display: flex;text-align: right;width: 35%;margin-top: 0;">
-                    <h3 class="meeting-name"><em>"Transferable skills, getting the most out of your skillset"</em></h3>
-                </div>
-            </div>
-
-            <div class="links-container">
-                <a class="square" href="./digital_program/digital_program.html">
-                    <h2>Digital program</h2>
-                </a>
-
-                <a class="square" href="./analog_program/ecrm21_final_program.pdf">
-                    <h2>Analog program</h2>
-                </a>
-
-                <a class="square" href="./intro_slides/index.html">
-                    <h2>Introduction slides</h2>
-                </a>
-
-                <a class="square" href="./break_slide/break_slide.html">
-                    <h2>Break slide</h2>
-                </a>
-
-                <!--<a class="square" href="#" style="background-color: #DFEBE8;cursor: not-allowed;">-->
-                <a class="square" href="./interactive_session/interactive_session.html">
-                    <h2 style="color: black;">Interactive session</h2>
-                </a>
-            </div>
-            
+    <base target="_blank" />
+  </head>
+  <body>
+    <div class="reveal container homepage">
+      <div class="logo" style="margin: 4em 0 2em">
+        <div class="square">
+          <img src="intro_slides/files/seal_white.png" style="margin: auto; width: 80%" />
         </div>
+        <h1 class="title upp">
+          Early<span style="color: transparent">Career</span><br />
+          Researchers<br />
+          <span style="color: transparent">Meeting</span>2021
+        </h1>
+      </div>
 
-    </body>
+      <div style="display: flex; justify-content: space-between; align-items: center; padding-top: 0">
+        <div style="display: flex">
+          <h1 class="title" style="font-size: 2em; text-align: center; padding-bottom: 0; padding-top: 0; line-height: 2">
+            <span style="color: transparent">26.</span>november
+          </h1>
+        </div>
+        <div style="display: flex; text-align: right; width: 35%; margin-top: 0">
+          <h3 class="meeting-name"><em>"Transferable skills, getting the most out of your skillset"</em></h3>
+        </div>
+      </div>
+
+      <div class="links-container">
+        <a class="square" href="./digital_program/digital_program.html">
+          <h2>Digital program</h2>
+        </a>
+
+        <a class="square" href="./analog_program/ecrm21_final_program.pdf">
+          <h2>Analog program</h2>
+        </a>
+
+        <a class="square" href="./intro_slides/index.html">
+          <h2>Introduction slides</h2>
+        </a>
+
+        <a class="square" href="./break_slide/break_slide.html">
+          <h2>Break slide</h2>
+        </a>
+
+        <!--<a class="square" href="#" style="background-color: #DFEBE8;cursor: not-allowed;">-->
+        <a class="square" href="./interactive_session/interactive_session.html">
+          <h2 style="color: black">Interactive session</h2>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
