--- a/2024-01-10-promenta-career-day/promenta-career-day-slides/index.html
+++ b/2024-01-10-promenta-career-day/promenta-career-day-slides/index.html
@@ -1,182 +1,174 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-		<title>From academics to anti-money laundering in DNB</title>
+    <title>From academics to anti-money laundering in DNB</title>
 
-		<!-- Style sheets -->
-		<link rel="stylesheet" href="reveal.js/dist/reset.css">
-		<link rel="stylesheet" href="reveal.js/dist/reveal.css">
-		<link rel="stylesheet" href="css/custom.css">
+    <!-- Style sheets -->
+    <link rel="stylesheet" href="reveal.js/dist/reset.css" />
+    <link rel="stylesheet" href="reveal.js/dist/reveal.css" />
+    <link rel="stylesheet" href="css/custom.css" />
 
-		<!-- Plugins -->
-		<link rel="stylesheet" href="plugin/pointer/pointer.css">
+    <!-- Plugins -->
+    <link rel="stylesheet" href="plugin/pointer/pointer.css" />
 
-		<!-- Favicon -->
-		<link rel="icon" href="lib/logo/dnb_logo.svg">
-	</head>
-	<body>
+    <!-- Favicon -->
+    <link rel="icon" href="lib/logo/dnb_logo.svg" />
+  </head>
+  <body>
+    <div class="reveal background-waterfall">
+      <div class="slides">
+        <!-- SLIDE -->
+        <section class="title">
+          <div class="title-card">
+            <div class="logo">
+              <div class="logo-dnb"></div>
+            </div>
+            <div class="content">
+              <h1>Transferring my skills from research to anti-money laundering in DNB</h1>
+            </div>
+            <div class="presenter">
+              <hr />
+              <div class="name">Daniel Roelfs</div>
+              <div class="role">Data Scientist at DNB</div>
+            </div>
+          </div>
+        </section>
 
-		<div class="reveal background-waterfall">
-			<div class="slides">
+        <!-- SLIDE -->
+        <section class="card-layout dark">
+          <div class="standard">
+            <div class="header">
+              <h2>My post-PhD alternatives</h2>
+            </div>
 
-				<!-- SLIDE -->
-				<section class="title">
-					<div class="title-card">
-						<div class="logo">
-							<div class="logo-dnb"></div>
-						</div>
-						<div class="content">
-							<h1>Transferring my skills from research to anti-money laundering in DNB</h1>
-						</div>
-						<div class="presenter">
-							<hr/>
-							<div class="name">Daniel Roelfs</div>
-							<div class="role">Data Scientist at DNB</div>
-						</div>
-					</div>
-				</section>
+            <div class="content">
+              <ul>
+                <li class="em">Post-doc in PhD project <span class="em-mint">(offer)</span></li>
+                <li>Consultant at McKinsey <span class="em-mint">(final round)</span></li>
+                <li>Senior Researcher at DNV <span class="em-mint">(second round)</span></li>
+                <li>Senior Consultant at PwC <span class="em-mint">(offer)</span></li>
+                <li>Data Scientist in DNB <span class="em-mint">(offer accepted)</span></li>
+              </ul>
+            </div>
 
-				<!-- SLIDE -->
-				<section class="card-layout dark">
-					<div class="standard">
-						<div class="header">
-							<h2>My post-PhD alternatives</h2>
-						</div>
+            <div class="logo"></div>
+          </div>
+        </section>
 
-						<div class="content">
-							<ul>
-								<li class="em">Post-doc in PhD project <span class="em-mint">(offer)</span></li>
-								<li>Consultant at McKinsey <span class="em-mint">(final round)</span></li>
-								<li>Senior Researcher at DNV <span class="em-mint">(second round)</span></li>
-								<li>Senior Consultant at PwC <span class="em-mint">(offer)</span></li>
-								<li>Data Scientist in DNB <span class="em-mint">(offer accepted)</span></li>
-							</ul>
-						</div>
+        <!-- SLIDE -->
+        <section class="card-layout dark">
+          <div class="standard">
+            <div class="header">
+              <h2>My job</h2>
+            </div>
 
-						<div class="logo">
-												
-						</div>
-					</div>
-				</section>
+            <div class="content">
+              <ul>
+                <li style="margin-bottom: 1em">Started in August 2022</li>
+                <li class="fragment" style="margin-bottom: 1em">Data scientist in anti-money laundering <span class="em-mint">(Group AML)</span></li>
+                <ul class="fragment">
+                  <li style="padding-left: 2em; margin-bottom: 0.5em">Building ML models</li>
+                  <li style="padding-left: 2em; margin-bottom: 0.5em">Python, SQL, and a bit of R</li>
+                  <li style="padding-left: 2em; margin-bottom: 2em">Talking about data and statistics</li>
+                </ul>
+                <li class="fragment" style="margin-bottom: 1em">My assignments</li>
+              </ul>
+            </div>
 
-				<!-- SLIDE -->
-				<section class="card-layout dark">
-					<div class="standard">
-						<div class="header">
-							<h2>My job</h2>
-						</div>
+            <div class="logo"></div>
+          </div>
+        </section>
 
-						<div class="content">
-							<ul>
-								<li style="margin-bottom: 1em;">Started in August 2022</li>
-								<li class="fragment" style="margin-bottom: 1em;">Data scientist in anti-money laundering <span class="em-mint">(Group AML)</span></li>
-									<ul class="fragment">
-										<li style="padding-left: 2em;margin-bottom: 0.5em;">Building ML models</li>
-										<li style="padding-left: 2em;margin-bottom: 0.5em;">Python, SQL, and a bit of R</li>
-										<li style="padding-left: 2em;margin-bottom: 2em;">Talking about data and statistics</li>
-									</ul>
-								<li class="fragment" style="margin-bottom: 1em;">My assignments</li>
-							</ul>
-						</div>
+        <!-- SLIDE -->
+        <section class="card-layout dark">
+          <div class="two-column">
+            <div class="left" style="margin-top: -16vmin">
+              <ul style="font-size: 3vmin">
+                <li class="b" style="font-size: 6vmin">PRO</li>
+                <li>Work-life balance</li>
+                <li>Cool tech, tools, and methods</li>
+                <li>Project speed, time between analysis and implementation</li>
+                <li>Salary + bonuses</li>
+                <li class="em">Norwegian working culture</li>
+              </ul>
+            </div>
 
-						<div class="logo">
-												
-						</div>
-					</div>
-				</section>
+            <div class="right fragment" style="margin-top: -28vmin">
+              <ul style="font-size: 3vmin">
+                <li class="b" style="font-size: 6vmin">CON</li>
+                <li>So many meetings</li>
+                <li>Corporate crap</li>
+                <li>Topic may not be as closely aligned with your interests as before</li>
+                <li class="em">Norwegian working culture</li>
+              </ul>
+            </div>
+            <div class="logo"></div>
+          </div>
+        </section>
 
-				<!-- SLIDE -->
-				<section class="card-layout dark">
-					<div class="two-column">
+        <!-- SLIDE -->
+        <section class="card-layout dark">
+          <div class="standard">
+            <div class="header">
+              <h2>How was the transition?</h2>
+            </div>
 
-						<div class="left" style="margin-top: -16vmin;">
-							<ul style="font-size: 3vmin;">
-								<li class="b" style="font-size: 6vmin;">PRO</li>
-								<li>Work-life balance</li>
-								<li>Cool tech, tools, and methods</li>
-								<li>Project speed, time between analysis and implementation</li>
-								<li>Salary + bonuses</li>
-								<li class="em">Norwegian working culture</li>
-							</ul>
-						</div>
+            <div class="content">
+              <ul>
+                <li class="fragment">Companies use a lot of resources on onboarding</li>
+                <li class="fragment" style="margin-bottom: 1em">Things I had to learn:</li>
+                <ul class="fragment">
+                  <li style="padding-left: 2em; margin-bottom: 0.5em">- SQL</li>
+                  <li style="padding-left: 2em; margin-bottom: 0.5em">- corporate bullshit</li>
+                  <li class="em" style="padding-left: 2em; margin-bottom: 2em">- a few other things...</li>
+                </ul>
+              </ul>
+            </div>
 
-						<div class="right fragment" style="margin-top: -28vmin;">
-							<ul style="font-size: 3vmin;">
-								<li class="b" style="font-size: 6vmin;">CON</li>
-								<li>So many meetings</li>
-								<li>Corporate crap</li>
-								<li>Topic may not be as closely aligned with your interests as before</li>
-								<li class="em">Norwegian working culture</li>
-							</ul>
-						</div>
-						<div class="logo"></div>
-					</div>
-				</section>
+            <div class="logo"></div>
+          </div>
+        </section>
 
-				<!-- SLIDE -->
-				<section class="card-layout dark">
-					<div class="standard">
-						<div class="header">
-							<h2>How was the transition?</h2>
-						</div>
+        <!-- SLIDE -->
+        <section class="card-layout dark">
+          <div class="standard">
+            <div class="header">
+              <h2>Three important things to remember</h2>
+            </div>
 
-						<div class="content">
-							<ul>
-								<li class="fragment">Companies use a lot of resources on onboarding</li>
-								<li class="fragment" style="margin-bottom: 1em;">Things I had to learn:</li>
-									<ul class="fragment">
-										<li style="padding-left: 2em;margin-bottom: 0.5em;">- SQL</li>
-										<li style="padding-left: 2em;margin-bottom: 0.5em;">- corporate bullshit</li>
-										<li class="em" style="padding-left: 2em;margin-bottom: 2em;">- a few other things...</li>
-									</ul>
-							</ul>
-						</div>
+            <div class="content">
+              <ul>
+                <li>You are competent and valuable</li>
+                <li class="fragment">Job ads list the dream candidate, not any real person</li>
+                <li class="fragment">Life is short and no job is forever</li>
+              </ul>
+            </div>
 
-						<div class="logo"></div>
-					</div>
-				</section>
+            <div class="logo"></div>
+          </div>
+        </section>
 
-				<!-- SLIDE -->
-				<section class="card-layout dark">
-					<div class="standard">
-						<div class="header">
-							<h2>Three important things to remember</h2>
-						</div>
+        <!-- SLIDE -->
+        <section class="card-layout">
+          <div class="logo-container dark">
+            <h1>Questions?</h1>
+            <div class="logo"></div>
+          </div>
+        </section>
+      </div>
+    </div>
 
-						<div class="content">
-							<ul>
-								<li>You are competent and valuable</li>
-								<li class="fragment">Job ads list the dream candidate, not any real person</li>
-								<li class="fragment">Life is short and no job is forever</li>
-							</ul>
-						</div>
+    <!-- PLUGINS -->
+    <script src="reveal.js/plugin/notes/notes.js"></script>
+    <script src="reveal.js/plugin/markdown/markdown.js"></script>
+    <script src="reveal.js/plugin/highlight/highlight.js"></script>
+    <script src="plugin/pointer/pointer.js"></script>
 
-						<div class="logo"></div>
-					</div>
-				</section>
-
-				<!-- SLIDE -->
-				<section class="card-layout">
-					<div class="logo-container dark">
-						<h1>Questions?</h1>
-						<div class="logo"></div>
-					</div>
-				</section>
-
-			</div>
-		</div>
-
-		<!-- PLUGINS -->
-		<script src="reveal.js/plugin/notes/notes.js"></script>
-		<script src="reveal.js/plugin/markdown/markdown.js"></script>
-		<script src="reveal.js/plugin/highlight/highlight.js"></script>
-		<script src="plugin/pointer/pointer.js"></script>
-
-		<!-- REVEAL.JS SETTINGS -->
-		<script src="reveal.js/dist/reveal.js"></script>
-		<script src="dist/reveal-init.js"></script>
-	</body>
+    <!-- REVEAL.JS SETTINGS -->
+    <script src="reveal.js/dist/reveal.js"></script>
+    <script src="dist/reveal-init.js"></script>
+  </body>
 </html>
