--- a/index.html
+++ b/index.html
@@ -1,194 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
 
-    <head>
-        <meta charset="utf-8">
+    <title>Index of slides</title>
 
-        <title>Index of slides</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="script.js"></script>
+  </head>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="script.js"></script>
+  <body>
+    <div class="container">
+      <h1>Collection of slides</h1>
 
-    </head>
-
-    <body>
-        <div class="container">
-        
-            <h1>Collection of slides</h1>
-            
-            <table class="tb">
-                <colgroup>
-                    <col style="width: 18%">
-                    <col style="width: 15%">
-                    <col style="width: 65%">
-                </colgroup>
-                <thead>
-                    <tr>
-                        <th>date</th>
-                        <th>type</th>
-                        <th>description</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="sametab" data-href="2024-11-19-phd-defense/phd-defense_index.html">
-                        <td>19-11-2024</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                        </td>
-                        <td>PhD Defense</td>
-                    </tr>
-                    <tr class="sametab" data-href="2024-01-10-promenta-career-day/promenta-career-day_index.html">
-                        <td>10-01-2024</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                        </td>
-                        <td>Promenta Career Day</td>
-                    </tr>
-                    <tr class="sametab" data-href="2023-10-26-psi-phd-seminar/psi-phd-seminar_index.html">
-                        <td>26-10-2023</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                        </td>
-                        <td>PSI PhD Seminar</td>
-                    </tr>
-                    <tr class="sametab" data-href="2022-11-16-phd-club-seminar/phd-club-seminar_index.html">
-                        <td>16-11-2022</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                        </td>
-                        <td>Imaging Group PhD Club Seminar</td>
-                    </tr>
-                    <tr class="sametab" data-href="2022-03-28-tubingen-meetup/tubingen-meetup_index.html">
-                        <td>28-03-2022</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                        </td>
-                        <td>Tübingen - Oslo Meet-up</td>
-                    </tr>
-                    <tr class="sametab" data-href="2021-11-26-ecrm21/ecrm21_index.html">
-                        <td>26-11-2021</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                            <i class="fab fa-html5"></i>
-                            <i class="far fa-file-pdf"></i>
-                        </td>
-                        <td>Early-Career Researchers Meeting 2021</td>
-                    </tr>
-                    <tr class="sametab" data-href="2021-11-15-imaging-group-phd-day/imaging-group-phd-day_index.html">
-                        <td>15-11-2021</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                            <i class="fas fa-folder-open"></i>
-                        </td>
-                        <td>Imaging Group PhD Day</td>
-                    </tr>
-                    <tr class="sametab" data-href="2021-10-29-synergy-meeting/synergy-meeting_index.html">
-                        <td>29-10-2021</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                            <i class="far fa-file-pdf"></i>
-                        </td>
-                        <td>Synergy Meeting</td>
-                    </tr>
-                    <tr class="sametab" data-href="2021-10-13-wcpg/wcpg_index.html">
-                        <td>13-10-2021</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                            <i class="far fa-file-pdf"></i>
-                            <i class="fas fa-file-powerpoint"></i>
-                        </td>
-                        <td>WCPG 2021</td>
-                    </tr>
-                    <tr class="sametab" data-href="2021-06-30-nrsn-symposium/nrsn-symposium_index.html">
-                        <td>30-06-2021</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                        </td>
-                        <td>NRSN Symposium</td>
-                    </tr>
-                    <tr class="sametab" data-href="2021-06-28-nrsn-phd-day/nrsn-phd-day_index.html">
-                        <td>28-06-2021</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                            <i class="fab fa-html5"></i>
-                        </td>
-                        <td>NRSN PhD Day</td>
-                    </tr>
-                    <tr class="sametab" data-href="2021-06-04-beautify-your-scientific-figures-talk/beautify-your-scientific-figures_index.html">
-                        <td>04-06-2021</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                        </td>
-                        <td>Beautify Your Scientific Figures</td>
-                    </tr>
-                    <tr class="sametab" data-href="2021-03-01-midterm-evaluation/midterm_index.html">
-                        <td>04-03-2021</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                        </td>
-                        <td>PhD Mid-Term Evaluation</td>
-                    </tr>
-                    <tr class="sametab" data-href="2021-02-25-synschiz-meeting/synschiz_meeting_index.html">
-                        <td>25-02-2021</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                        </td>
-                        <td>SYNSCHIZ Meeting</td>
-                    </tr>
-                    <tr class="sametab" data-href="2020-11-27-ecrm20/ecrm20_index.html">
-                        <td>27-11-2020</td>
-                        <td>
-                            <i class="fab fa-js-square"></i>
-                            <i class="fab fa-html5"></i>
-                            <i class="far fa-image"></i>
-                        </td>
-                        <td>Early-Career Researchers Meeting 2020</td>
-                    </tr>
-                    <tr class="sametab" data-href="2020-06-12-TOPday/topday_index.html">
-                        <td>12-06-2020</td>
-                        <td>
-                            <i class="fab fa-apple"></i>
-                            <i class="far fa-file-pdf"></i>
-                        </td>
-                        <td>Annual TOP Day 2020</td>
-                    </tr>
-                    <tr class="sametab" data-href="2020-05-15-SynergyMeeting/synergymeeting_index.html">
-                        <td>15-05-2020</td>
-                        <td>
-                            <i class="fab fa-apple"></i>
-                            <i class="far fa-file-pdf"></i>
-                            <i class="far fa-file-powerpoint"></i>
-                        </td>
-                        <td>Synergy Meeting</td>
-                    </tr>
-                    <tr class="sametab" data-href="2020-02-07-ggplot_workshop/ggplotworkshop_index.html">
-                        <td>07-02-2020</td>
-                        <td>
-                            <i class="fab fa-html5"></i>
-                            <i class="far fa-file-pdf"></i>
-                            <i class="fab fa-r-project"></i>
-                        </td>
-                        <td>ggplot workshop in the Research Meeting</td>
-                    </tr>
-                    <tr class="sametab" data-href="2019-12-11-ImagingGeneticsMeeting/igmeeting_index.html">
-                        <td>11-12-2019</td>
-                        <td>
-                            <i class="fab fa-apple"></i>
-                            <i class="far fa-file-pdf"></i>
-                        </td>
-                        <td>Imaging Genetics meeting</td>
-                    </tr>
-                    <tr class="sametab" data-href="2019-05-06-PhD_plan/phdplan_index.html">
-                        <td>06-05-2019</td>
-                        <td><i class="fas fa-file-powerpoint"></i></td>
-                        <td>PhD plan presentation in Imaging meeting</td>
-                    </tr>
-                </tbody>
-            </table>
-
-        </div>
-    </body>
+      <table class="tb">
+        <colgroup>
+          <col style="width: 18%" />
+          <col style="width: 15%" />
+          <col style="width: 65%" />
+        </colgroup>
+        <thead>
+          <tr>
+            <th>date</th>
+            <th>type</th>
+            <th>description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="sametab" data-href="2024-11-19-phd-defense/phd-defense_index.html">
+            <td>19-11-2024</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+            </td>
+            <td>PhD Defense</td>
+          </tr>
+          <tr class="sametab" data-href="2024-01-10-promenta-career-day/promenta-career-day_index.html">
+            <td>10-01-2024</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+            </td>
+            <td>Promenta Career Day</td>
+          </tr>
+          <tr class="sametab" data-href="2023-10-26-psi-phd-seminar/psi-phd-seminar_index.html">
+            <td>26-10-2023</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+            </td>
+            <td>PSI PhD Seminar</td>
+          </tr>
+          <tr class="sametab" data-href="2022-11-16-phd-club-seminar/phd-club-seminar_index.html">
+            <td>16-11-2022</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+            </td>
+            <td>Imaging Group PhD Club Seminar</td>
+          </tr>
+          <tr class="sametab" data-href="2022-03-28-tubingen-meetup/tubingen-meetup_index.html">
+            <td>28-03-2022</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+            </td>
+            <td>Tübingen - Oslo Meet-up</td>
+          </tr>
+          <tr class="sametab" data-href="2021-11-26-ecrm21/ecrm21_index.html">
+            <td>26-11-2021</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+              <i class="fab fa-html5"></i>
+              <i class="far fa-file-pdf"></i>
+            </td>
+            <td>Early-Career Researchers Meeting 2021</td>
+          </tr>
+          <tr class="sametab" data-href="2021-11-15-imaging-group-phd-day/imaging-group-phd-day_index.html">
+            <td>15-11-2021</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+              <i class="fas fa-folder-open"></i>
+            </td>
+            <td>Imaging Group PhD Day</td>
+          </tr>
+          <tr class="sametab" data-href="2021-10-29-synergy-meeting/synergy-meeting_index.html">
+            <td>29-10-2021</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+              <i class="far fa-file-pdf"></i>
+            </td>
+            <td>Synergy Meeting</td>
+          </tr>
+          <tr class="sametab" data-href="2021-10-13-wcpg/wcpg_index.html">
+            <td>13-10-2021</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+              <i class="far fa-file-pdf"></i>
+              <i class="fas fa-file-powerpoint"></i>
+            </td>
+            <td>WCPG 2021</td>
+          </tr>
+          <tr class="sametab" data-href="2021-06-30-nrsn-symposium/nrsn-symposium_index.html">
+            <td>30-06-2021</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+            </td>
+            <td>NRSN Symposium</td>
+          </tr>
+          <tr class="sametab" data-href="2021-06-28-nrsn-phd-day/nrsn-phd-day_index.html">
+            <td>28-06-2021</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+              <i class="fab fa-html5"></i>
+            </td>
+            <td>NRSN PhD Day</td>
+          </tr>
+          <tr class="sametab" data-href="2021-06-04-beautify-your-scientific-figures-talk/beautify-your-scientific-figures_index.html">
+            <td>04-06-2021</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+            </td>
+            <td>Beautify Your Scientific Figures</td>
+          </tr>
+          <tr class="sametab" data-href="2021-03-01-midterm-evaluation/midterm_index.html">
+            <td>04-03-2021</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+            </td>
+            <td>PhD Mid-Term Evaluation</td>
+          </tr>
+          <tr class="sametab" data-href="2021-02-25-synschiz-meeting/synschiz_meeting_index.html">
+            <td>25-02-2021</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+            </td>
+            <td>SYNSCHIZ Meeting</td>
+          </tr>
+          <tr class="sametab" data-href="2020-11-27-ecrm20/ecrm20_index.html">
+            <td>27-11-2020</td>
+            <td>
+              <i class="fab fa-js-square"></i>
+              <i class="fab fa-html5"></i>
+              <i class="far fa-image"></i>
+            </td>
+            <td>Early-Career Researchers Meeting 2020</td>
+          </tr>
+          <tr class="sametab" data-href="2020-06-12-TOPday/topday_index.html">
+            <td>12-06-2020</td>
+            <td>
+              <i class="fab fa-apple"></i>
+              <i class="far fa-file-pdf"></i>
+            </td>
+            <td>Annual TOP Day 2020</td>
+          </tr>
+          <tr class="sametab" data-href="2020-05-15-SynergyMeeting/synergymeeting_index.html">
+            <td>15-05-2020</td>
+            <td>
+              <i class="fab fa-apple"></i>
+              <i class="far fa-file-pdf"></i>
+              <i class="far fa-file-powerpoint"></i>
+            </td>
+            <td>Synergy Meeting</td>
+          </tr>
+          <tr class="sametab" data-href="2020-02-07-ggplot_workshop/ggplotworkshop_index.html">
+            <td>07-02-2020</td>
+            <td>
+              <i class="fab fa-html5"></i>
+              <i class="far fa-file-pdf"></i>
+              <i class="fab fa-r-project"></i>
+            </td>
+            <td>ggplot workshop in the Research Meeting</td>
+          </tr>
+          <tr class="sametab" data-href="2019-12-11-ImagingGeneticsMeeting/igmeeting_index.html">
+            <td>11-12-2019</td>
+            <td>
+              <i class="fab fa-apple"></i>
+              <i class="far fa-file-pdf"></i>
+            </td>
+            <td>Imaging Genetics meeting</td>
+          </tr>
+          <tr class="sametab" data-href="2019-05-06-PhD_plan/phdplan_index.html">
+            <td>06-05-2019</td>
+            <td><i class="fas fa-file-powerpoint"></i></td>
+            <td>PhD plan presentation in Imaging meeting</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
