--- a/2021-06-28-nrsn-phd-day/break_slide/break_slide.html
+++ b/2021-06-28-nrsn-phd-day/break_slide/break_slide.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
 
-<head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    
     <title>Break slide</title>
-        
-    <link rel="stylesheet" href="style.css">
 
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-
+  <body>
     <div class="container brains-bg">
-
-        <div class="glass">
-            <h1>We're on a break...</h1>
-        </div>
-
+      <div class="glass">
+        <h1>We're on a break...</h1>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
